tests/compile-fail/unknown-value.plk
fn foo() {
    let x = 1;
    let y = z; // ERROR: unknown value `z`
    let z = x + y;
}